--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "eslint": "^3.17.0",
-    "eslint-plugin-react-native": "^3.2.1",
     "react": "16.3.1",
-    "react-native": "0.55.4",
-    "react-navigation": "^2.6.2"
+    "react-native": "0.55.4"
   },
   "devDependencies": {
     "babel-jest": "23.2.0",
